test : 이메일 인증 수정에 따른 테스트 코드 수정